# aegis-proto

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: crates-publish.yml  release.yml
proto/: aegis_cluster.proto  aegis_cortex.proto  aegis_remote_storage.proto  aegis_runtime.proto  embedding.proto  seal_gateway.proto  smcp_gateway.proto
src/: lib.rs
