[package]
name = "aegis-proto"
version = "0.12.0-pre-alpha"
edition = "2021"
authors = ["100monkeys AI, Inc."]
license = "AGPL-3.0"
repository = "https://github.com/100monkeys-ai/aegis-proto"

[dependencies]
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.0"
